--- a/dev/pug/includes/content-contacts.pug
+++ b/dev/pug/includes/content-contacts.pug
@@ -42,5 +42,5 @@ main.main
 						textarea.form__textarea
 						label.form__label Текст сообщения
 					.form__agree
-						+custom-checkbox('Я прочитал и принимаю условия Политики конфиденциальности и Правил обработки персональных данных')
+						+custom-checkbox-agree()
 					button.button.button_full.form__submit.open-popup-link(type="submit" data-mfp-src="#thanks-popup") ОТПРАВИТЬ
