--- a/dev/pug/includes/content-index.pug
+++ b/dev/pug/includes/content-index.pug
@@ -91,38 +91,38 @@ main.main
 			.h1 БРЕНДЫ
 			.section-brands__items.section__slider
 				- for (var x = 0; x < 2; x++)
-					a.section-brands__item(href="")
+					.section-brands__item
 						//- span.section-brands__premium Премиум-бренд
 						span.section-brands__logo 
 							img(src="./img/brand1.png" alt="")
 						span.section-brands__list 
-							span.section-brands__list-item Консервированные корма
-							span.section-brands__list-item Сухие корма для котят
-							span.section-brands__list-item Сухие корма для взрослых кошек
-							span.section-brands__list-item Сухие корма для пожелых кошек
-							span.section-brands__list-item Гигиенические наполнители
-					a.section-brands__item(href="")
+							a.section-brands__list-item(href="") Консервированные корма
+							a.section-brands__list-item(href="") Сухие корма для котят
+							a.section-brands__list-item(href="") Сухие корма для взрослых кошек
+							a.section-brands__list-item(href="") Сухие корма для пожелых кошек
+							a.section-brands__list-item(href="") Гигиенические наполнители
+					.section-brands__item
 						span.section-brands__logo 
 							img(src="./img/brand2.png" alt="")
 						span.section-brands__list 
-							span.section-brands__list-item Консервированные корма
-							span.section-brands__list-item Сухие корма для щенков
-							span.section-brands__list-item Сухие корма для взрослых собак
-							span.section-brands__list-item Сухие корма для пожилых собак
-							span.section-brands__list-item Лакомства для собак
-					a.section-brands__item(href="")
+							a.section-brands__list-item(href="") Консервированные корма
+							a.section-brands__list-item(href="") Сухие корма для щенков
+							a.section-brands__list-item(href="") Сухие корма для взрослых собак
+							a.section-brands__list-item(href="") Сухие корма для пожилых собак
+							a.section-brands__list-item(href="") Лакомства для собак
+					.section-brands__item
 						span.section-brands__logo 
 							img(src="./img/brand3.png" alt="")
 						span.section-brands__list 
-							span.section-brands__list-item Консервированные корма с травами для кошек
-					a.section-brands__item(href="")
+							a.section-brands__list-item(href="") Консервированные корма с травами для кошек
+					.section-brands__item
 						span.section-brands__logo 
 							img(src="./img/brand4.png" alt="")
 						span.section-brands__list 
-							span.section-brands__list-item Зерновые корма для птиц
-							span.section-brands__list-item Зерновые лакомства для птиц
-							span.section-brands__list-item Зерновые корма для грызунов
-							span.section-brands__list-item Зерновые лакомства для грызунов
+							a.section-brands__list-item(href="") Зерновые корма для птиц
+							a.section-brands__list-item(href="") Зерновые лакомства для птиц
+							a.section-brands__list-item(href="") Зерновые корма для грызунов
+							a.section-brands__list-item(href="") Зерновые лакомства для грызунов
 	.section-faq 
 		.container 
 			.h1 ЧАСТО ЗАДАВАЕМЫЕ ВОПРОСЫ
