--- a/dev/pug/includes/footer.pug
+++ b/dev/pug/includes/footer.pug
@@ -50,7 +50,7 @@ footer.footer
 					textarea.form__textarea
 					label.form__label Комментарий
 				.form__agree
-					+custom-checkbox('Я прочитал и принимаю условия Политики конфиденциальности и Правил обработки персональных данных')
+					+custom-checkbox-agree('Я прочитал и принимаю условия Политики конфиденциальности и Правил обработки персональных данных')
 				button.button.button_full.form__submit.open-popup-link(type="submit" data-mfp-src="#thanks-popup") ЗАКАЗАТЬ
 
 
