--- a/dev/pug/includes/header.pug
+++ b/dev/pug/includes/header.pug
@@ -28,6 +28,13 @@ header.header
 					button.search__button(type="submit")
 						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"><circle cx="11.5" cy="11.5" r="9.5" stroke="#0C0C0C" stroke-width="1.5"/>  <path d="M18.5 18.5L22 22" stroke="#0C0C0C" stroke-width="1.5" stroke-linecap="round"/></svg>
 					input.search__input(type="text" value="" placeholder="Поиск") 
+					.search__results 
+						.search__result 
+							a(href="") Консервированные корма с травами для кошек
+						.search__result 
+							a(href="") Консервированные корма для собак
+						.search__result 
+							a(href="") Консервированные корма
 			button.hamburger(type="button")
 				span
 				span
