--- a/dev/styles/import/brands.scss
+++ b/dev/styles/import/brands.scss
@@ -64,7 +64,7 @@
     height: 60rem;
     border-radius: 1rem;
     position: relative;
-    background-position: cover;
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     display: block;
