--- a/dev/styles/import/footer.scss
+++ b/dev/styles/import/footer.scss
@@ -73,6 +73,7 @@
     line-height: 130%;
     margin-bottom: 3rem;
     display: block;
+    @include hover;
   }
   &__mail {
     display: block;
@@ -82,6 +83,7 @@
     line-height: 2.4rem;
     margin-bottom: 1.2rem;
     color: $color-text-dark;
+    @include hover;
   }
   &__phone {
     font-size: 2.4rem;
@@ -92,6 +94,7 @@
     margin-bottom: 1rem;
     color: $color-text-dark;
     font-family: $font;
+    @include hover;
   }
 
   &__menu {
