--- a/dev/styles/import/header.scss
+++ b/dev/styles/import/header.scss
@@ -40,6 +40,7 @@
   flex-direction: column;
   gap: 0.5rem;
   display: none;
+  flex: none;
   span {
     width: 100%;
     height: 1px;
@@ -138,21 +139,25 @@
 }
 .nav {
   @media (max-width: $breakpoint-tablet) {
-    display: none;
-    .open-menu & {
-      display: block;
-      width: 100%;
+    left: -200vw;
+    @include tr-slow;
+    position: absolute;
+    top: -1.6rem;
+    background: #f7f7f7;
+    width: calc(100% + 3.2rem);
+    z-index: 998;
+    padding-left: 2.8rem;
+    padding-right: 2.8rem;
+    padding-top: 3.9rem;
+    padding-bottom: 6.4rem;
 
-      background: #f7f7f7;
-      width: calc(100% + 3.2rem);
-      position: absolute;
-      top: -1.6rem;
+    .open-menu & {
+      // display: block;
+      // background: #f7f7f7;
+      // width: calc(100% + 3.2rem);
+      // position: absolute;
+      // top: -1.6rem;
       left: -1.6rem;
-      z-index: 998;
-      padding-left: 2.8rem;
-      padding-right: 2.8rem;
-      padding-top: 3.9rem;
-      padding-bottom: 6.4rem;
       box-shadow: -4px 14px 33px 0px rgba(0, 0, 0, 0.1),
         -16px 57px 60px 0px rgba(0, 0, 0, 0.09),
         -36px 129px 80px 0px rgba(0, 0, 0, 0.05),
@@ -173,7 +178,8 @@
     line-height: normal;
     text-transform: uppercase;
     color: $color-text-dark;
-    .open-menu & {
+    // .open-menu & {
+    @media (max-width: $breakpoint-tablet) {
       flex-direction: column;
       align-items: flex-start;
       gap: 3rem;
@@ -192,7 +198,8 @@
     line-height: normal;
     text-transform: uppercase;
     @include tr;
-    .open-menu & {
+    // .open-menu & {
+    @media (max-width: $breakpoint-tablet) {
       font-size: 2.4rem;
     }
     &:hover {
