--- a/dev/styles/import/text.scss
+++ b/dev/styles/import/text.scss
@@ -56,8 +56,15 @@
   }
 }
 .section-text {
+  .h1 + .h2 {
+    margin-top: -2rem;
+  }
+  .h2 {
+    margin-top: 3.8rem;
+    margin-bottom: 2rem;
+  }
   p:not(:last-child) {
-    margin-bottom: 1em;
+    margin-bottom: 1.8rem;
   }
   &_padleft {
     padding-left: 6rem;
