--- a/dev/styles/import/where-buy.scss
+++ b/dev/styles/import/where-buy.scss
@@ -104,6 +104,7 @@
     a {
       font-size: 1.4rem;
       color: $color-text-dark;
+      @include hover;
     }
   }
   &__logo {
@@ -127,7 +128,7 @@
   margin-top: 2rem;
   @include tr;
   &:hover {
-    opacity: 0.8;
+    opacity: 0.7;
   }
 }
 .distributors {
@@ -168,6 +169,7 @@
     color: #000;
     a {
       font-size: 1.4rem;
+      @include hover;
     }
   }
 }
