--- a/dev/styles/import/base.scss
+++ b/dev/styles/import/base.scss
@@ -131,7 +131,7 @@ textarea {
 
 .main {
   flex: 1;
-  overflow: hidden;
+  // overflow: hidden;
   // p {
   //   font-size: 2.2rem;
   //   line-height: 135%;
