--- a/dev/styles/import/brands.scss
+++ b/dev/styles/import/brands.scss
@@ -93,7 +93,7 @@
     }
     &:hover {
       &:before {
-        background-color: #ff9741;
+        background-color: #ec6a00;
       }
     }
     &:active {
