--- a/dev/styles/import/search.scss
+++ b/dev/styles/import/search.scss
@@ -1,13 +1,14 @@
 .search {
   margin-right: 1rem;
   width: 6.6rem;
+  @media (max-width: $breakpoint-tablet) {
+    margin-left: auto;
+  }
 
   &.show-results {
     border-radius: 3.3rem 3.3rem 0 0;
   }
-  @media (max-width: $breakpoint-tablet) {
-    margin-left: auto;
-  }
+
   .search-active & {
     // width: 100%;
     background: #f7f7f7;
@@ -74,6 +75,13 @@
       opacity: 1;
       overflow: visible;
       width: 100%;
+      background: #f7f7f7;
+      border-radius: 3.3rem;
+      box-shadow: -4px 14px 33px 0px rgba(0, 0, 0, 0.1),
+        -16px 57px 60px 0px rgba(0, 0, 0, 0.09),
+        -36px 129px 80px 0px rgba(0, 0, 0, 0.05),
+        -64px 229px 95px 0px rgba(0, 0, 0, 0.01),
+        -100px 359px 104px 0px rgba(0, 0, 0, 0);
     }
   }
   &__button {
