--- a/dev/pug/includes/content-product.pug
+++ b/dev/pug/includes/content-product.pug
@@ -24,7 +24,7 @@ main.main
 					.product__title Описание
 					.product__text Сухой полнорационный гипоаллергенный корм для взрослых собак крупных пород «Верные друзья» специально разработан для удовлетворения потребностей в питательных веществах организма взрослой собаки и включает в состав хондропротекторы для профилактики заболеваний суставов. Полезная рецептура содержит высококачественные и легкоусвояемые ингредиенты (мясо ягнёнка, рис). Ценные омега-3 и омега-6 жирные кислоты обеспечивают здоровье кожи и блестящую шерсть. Корм «Верные друзья» идеально подходит чувствительным к корму собакам с нормальными потребностями в энергии и протеине. Формула содержит все витамины и минеральные вещества, необходимые для сбалансированного питания собаки. Корм не содержит искусственные ароматизаторы и красители.
 					.product__buttons 
-						button.button.button_order ЗАКАЗАТЬ
+						button.button.button_order.open-popup-link(data-mfp-src="#order-popup" data-effect="mfp-zoom-in") ЗАКАЗАТЬ
 						.product__shops
 							.icon-wildberries
 							.icon-ozon
