--- a/dev/styles/import/base.scss
+++ b/dev/styles/import/base.scss
@@ -50,8 +50,8 @@ body {
   min-height: 100vh;
 
   @media (max-width: $breakpoint-mobile) {
-    font-size: 1.4rem;
-    line-height: 1.2;
+    // font-size: 1.4rem;
+    // line-height: 1.3;
   }
 }
 .adaptive_video {
@@ -439,4 +439,22 @@ button.mfp-close,
 }
 .mfp-close-btn-in .mfp-close {
   color: #fff;
+}
+.mfp-with-zoom .mfp-container,
+.mfp-with-zoom.mfp-bg {
+  opacity: 0;
+  -webkit-backface-visibility: hidden;
+  @include tr;
+}
+
+.mfp-with-zoom.mfp-ready .mfp-container {
+  opacity: 1;
+}
+.mfp-with-zoom.mfp-ready.mfp-bg {
+  opacity: 0.8;
+}
+
+.mfp-with-zoom.mfp-removing .mfp-container,
+.mfp-with-zoom.mfp-removing.mfp-bg {
+  opacity: 0;
 }
