--- a/dev/styles/import/search.scss
+++ b/dev/styles/import/search.scss
@@ -1,6 +1,7 @@
 .search {
   margin-right: 1rem;
   width: 6.6rem;
+  @include tr;
   @media (max-width: $breakpoint-tablet) {
     margin-left: auto;
   }
@@ -50,11 +51,12 @@
   }
   &__form {
     width: 6.6rem;
+    width: 100%;
     position: relative;
-    // display: none;
-    overflow: hidden;
-    transition: width 0.5s ease;
-    opacity: 0;
+    display: none;
+    // overflow: hidden;
+    // transition: width 0.5s ease;
+    // opacity: 0;
     @include tr;
 
     // background: #f7f7f7;
@@ -65,11 +67,11 @@
     //   -64px 229px 95px 0px rgba(0, 0, 0, 0.01),
     //   -100px 359px 104px 0px rgba(0, 0, 0, 0);
     .search-active & {
-      // display: block;
-      width: 100%;
-      overflow: visible;
-      opacity: 1;
-      margin-left: auto;
+      display: block;
+      // width: 100%;
+      // overflow: visible;
+      // opacity: 1;
+      // margin-left: auto;
     }
     .page-search & {
       opacity: 1;
@@ -141,22 +143,27 @@
     }
   }
   &__results {
-    position: relative;
+    // position: relative;
     // border-top: 1px solid rgba(12, 12, 12, 0.1);
     position: absolute;
-    padding: 3rem;
-    padding-top: 0;
+    // padding: 0 3rem 3rem 3rem;
     display: flex;
     flex-direction: column;
     gap: 3rem;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 1.4rem;
     color: #0c0c0c;
-    display: none;
+    // display: none;
     background: #f7f7f7;
     border-radius: 0 0 3.3rem 3.3rem;
     z-index: 5;
     width: 100%;
+    @include tr;
+
+    max-height: 0px;
+    transition: max-height 0.5s ease-out;
+    overflow: hidden;
+
     box-shadow: -4px 14px 33px 0px rgba(0, 0, 0, 0.1),
       -16px 57px 60px 0px rgba(0, 0, 0, 0.09),
       -36px 129px 80px 0px rgba(0, 0, 0, 0.05),
@@ -164,7 +171,9 @@
       -100px 359px 104px 0px rgba(0, 0, 0, 0);
 
     .show-results & {
-      display: flex;
+      max-height: 400px;
+      padding: 0 3rem 3rem 3rem;
+      transition: max-height 0.5s ease-in;
     }
     &:before {
       content: '';
