--- a/dev/styles/import/header.scss
+++ b/dev/styles/import/header.scss
@@ -167,6 +167,9 @@
   }
   .search-active & {
     display: none;
+    @media (max-width: 1024px) {
+      display: block;
+    }
   }
   &__list {
     @include flexcc;
