--- a/dev/styles/import/main.scss
+++ b/dev/styles/import/main.scss
@@ -580,20 +580,21 @@
     font-weight: 400;
     line-height: 130%;
 
-    @include tr-slow;
-    // display: none;
-    height: 0px;
-    overflow: hidden;
+    // @include tr-slow;
+    display: none;
+    padding-bottom: 2rem;
+    padding-top: 3rem;
+    // height: 0px;
+    // overflow: hidden;
     p {
       &:not(:last-child) {
         margin-bottom: 2rem;
       }
     }
     .active & {
-      height: auto;
-      padding-bottom: 2rem;
-      padding-top: 3rem;
-      // display: block;
+      // height: auto;
+      // padding-bottom: 2rem;
+      // padding-top: 3rem;
     }
     @media (max-width: $breakpoint-mobile) {
       padding-top: 0.8rem;
